# spectec-core

./: '  .dockerignore  .gitignore  .gitmodules  1-syntax.watsup  3g-typing-decl.watsup  Makefile  README.md  dockerfile  dockerfile.p4spectec  dune-project  elab.output  p4c.dockerfile  p4cherry.opam  p4spectec_p4c.dockerfile  pgm.p4  run_coverage.sh  spec-mini.struct  spectec.dockerfile  test.sh
p4/: dune-project
p4/lib/: dune
p4/lib/domain/: dom.ml  dune
p4/lib/el/: ast.ml  dune  eq.ml  mp.ml  pp.ml  walk.ml
p4/lib/exec/: core.ml  csig.ml  ctx.ml  driver.ml  dune  ebpf.ml  esig.ml  gen.ml  hash.ml  interp.ml  sig.ml  sigs.ml  v1model.ml
p4/lib/frontend/: context.ml  lexer.mll  parse.ml  parser.mly  transform.ml
p4/lib/il/: ast.ml  dune  eq.ml  pp.ml  pp_to_el.ml  walk.ml  walk_transform.ml
p4/lib/il/tdomain/: eq_alpha.ml  eq_type.ml  free.ml  pp.ml  pp_type.ml  subst.ml  types.ml  utils.ml
p4/lib/instance/: ctx.ml  dune  instantiate.ml
p4/lib/lang/: ast.ml  dune  eq.ml  pp.ml  walk.ml  walk_transform.ml
p4/lib/runtime/: envs.ml
p4/lib/runtime-dynamic/: cons.ml  dune  envs.ml  func.ml  lvalue.ml  object.ml  state.ml  table.ml
p4/lib/runtime-static/: builtins.ml  ctk.ml  dir.ml  dune  envs.ml  lvalue.ml  numerics.ml  value.ml
p4/lib/runtime-static/tdomain/: eq.ml  free.ml  pp.ml  subst.ml  tdom.ml  types.ml  utils.ml
p4/lib/runtime-static/vdomain/: eq.ml  num.ml  pp.ml  utils.ml  value.ml  vdom.ml
p4/lib/runtime-type/: dune  eq_alpha.ml  free.ml  subst.ml  types.ml  utils.ml
p4/lib/runtime-value/: dune
p4/lib/runtime/domain/: dir.ml  dom.ml
p4/lib/runtime/tdomain/: pp.ml  subst.ml
p4/lib/stf/: compare.ml  dune  lexer.mll  parse.ml  parser.mly  print.ml
p4/lib/surface/: ast.ml  dune  print.ml
p4/lib/typing/: ctx.ml  dune  error.ml  postprocess.ml  static.ml  subtyp.ml  tblctx.ml  typecheck.ml  wellformed.ml
p4/lib/util/: dune  error.ml  pp.ml  source.ml
p4/lib/vdomain/: dune  pp.ml
p4/status/: parser.err  run-v1model.analysis.md  typecheck-neg-excluded.err  typecheck-neg.analysis.md  typecheck-pos-excluded.err  typecheck-pos.analysis.md  typecheck-pos.err
p4/status/p4c/: parser.err  run-v1model.analysis.md  typecheck-neg-excluded.err  typecheck-neg.analysis.md  typecheck-pos-excluded.err  typecheck-pos.analysis.md  typecheck-pos.err
p4/status/petr4/: run-v1model.analysis.md  typecheck-pos.analysis.md
p4/test/: dune  instantiate_p4c.expected  instantiate_petr4.expected  parse_p4c.expected  parse_petr4.expected  run_ebpf_p4c.expected  run_v1model_p4c.expected  run_v1model_petr4.expected  test.ml  typecheck_neg_p4c.expected  typecheck_neg_p4c_excluded.expected  typecheck_neg_petr4.expected  typecheck_pos_p4c.expected  typecheck_pos_p4c_excluded.expected  typecheck_pos_petr4.expected  typecheck_pos_petr4_excluded.expected
p4/test/program/ill-typed/: issue3808-1.p4
p4/test/program/well-typed/: entries-prio.p4  issue3671-1.p4
p4/test/stf/v1model-patch/: ternary2-bmv2.stf
p4/testdata/custom/: exit-from-arg.p4  exit-from-decl.p4  exit-from-lvalue.p4  exit-from-lvalue.stf
p4/testdata/petr4/stf-patch/: int.stf
p4spec/: dune-project
p4spec/lib/: dune
p4spec/lib/domain/: dom.ml  dune  lib.ml
p4spec/lib/el/: ast.ml  dune  free.ml  print.ml
p4spec/lib/elaborate/: attempt.ml  ctx.ml  dune  elab.ml  error.ml  fresh.ml
p4spec/lib/elaborate/dataflow/: analysis.ml  bind.ml  binding.ml  collectbind.ml  dctx.ml  dimension.ml  injectbind.ml  multibind.ml  partialbind.ml
p4spec/lib/elaboration/: attempt.ml  bind.ml  ctx.ml  dom.ml  dune  elab.ml  envs.ml  free.ml  fresh.ml  mult.ml  rel.ml  subst.ml  type.ml  typedef.ml
p4spec/lib/elaboration/analysis/: analyze.ml  binding.ml  free.ml  fresh.ml  multibinds.ml  multiplicity.ml  partialbinds.ml
p4spec/lib/elaboration/dataflow/: analysis.ml  bind.ml  binding.ml  collectbind.ml  dctx.ml  fresh.ml  (+4 more)
p4spec/lib/frontend/: dune  lexer.mll  parse.ml  parser.mly
p4spec/lib/il/: ast.ml  dune  eq.ml  free.ml  print.ml  print_debug.ml
p4spec/lib/interp-il/: attempt.ml  cache.ml  ctx.ml  dune  instantiation.ml  interp.ml  trace.ml  typing.ml  typing_concrete.ml  typing_new.ml
p4spec/lib/interp-sl/: cache.ml  coverage.ml  ctx.ml  dune  in.ml  interp.ml  out.ml  typing.ml
p4spec/lib/interpret/: attempt.ml  builtins.ml  cache.ml  ctx.ml  dune  error.ml  interp.ml  trace.ml
p4spec/lib/p4/: dune  in.ml
p4spec/lib/parsing/: ast_utils.ml  context.ml  debug_config.ml  dune  extract.ml  hint.ml  lexer.mll  parse.ml  parser.mly  parser_debug.ml  pp.ml  pp_gen.ml  source.ml  traverse.ml  value.ml
p4spec/lib/runtime-dynamic/: cache.ml  dune  envs.ml  func.ml  rel.ml  typ.ml  typdef.ml  value.ml  var.ml  vid.ml
p4spec/lib/runtime-dynamic-il/: dune  envs.ml  value.ml  var.ml
p4spec/lib/runtime-dynamic-sl/: dune  envs.ml  typ.ml  typdef.ml  value.ml  var.ml
p4spec/lib/runtime-static/: dim.ml  dune  envs.ml  func.ml  plaintyp.ml  rel.ml  typ.ml  typdef.ml
p4spec/lib/runtime-testgen/: cov.ml  dune
p4spec/lib/sl/: ast.ml  dune  eq.ml  print.ml
p4spec/lib/structure/: antiunify.ml  dune  instrument.ml  optimize.ml  renamer.ml  struct.ml
p4spec/lib/testgen/: boot.ml  config.ml  derive.ml  dune  filesys.ml  gen.ml  logger.ml  modes.ml  mutate.ml  query.ml  rand.ml  target.ml
p4spec/lib/util/: attempt.ml  dune  error.ml  source.ml
p4spec/lib/xl/: atom.ml  bool.ml  dune  mixop.ml  num.ml
p4spec/prototypes/: bracks-and-seqs.watsup  dataflow.watsup  defs.watsup  dims.watsup  iter.watsup  mixop-variant.watsup  multibinds.watsup  partialbinds.watsup  path.watsup  prems.watsup  test.watsup  typdefs.watsup  type-params.watsup  underscore.watsup
p4spec/status/: misc_neg_p4c.md
p4spec/test/: cov_sl_neg_p4c.expected  cov_sl_p4c.expected  dune  elab.expected  parser_p4c.expected  parser_p4c_neg.expected  parser_p4c_pos.expected  run_il_neg_p4c.expected  run_il_pos_p4c.expected  run_sl_neg_p4c.expected  run_sl_pos_p4c.expected  run_typing_neg_p4c.expected  run_typing_pos_p4c.expected  struct.expected  test.ml  test_parser.ml
p4spec/test-inst/: dune  inst_il_p4c.expected  test_inst.ml
(+1444 files in other folders)
