(lang dune 3.7)
(using menhir 2.0)
(name p4cherry)

(generate_opam_files true)

(package
  (name p4cherry)
  (version 0.0.1)
  (synopsis "P4Cherry: A to-be interpreter of the P4 Programming Language")
  (maintainers "99jaehyunlee@kaist.ac.kr")
  (depends
    bignum
    bisect_ppx
    core
    core_unix))
