(lang dune 3.7)
(using menhir 2.0)
(using mdx 0.2)
(name p4spec)

(generate_opam_files true)

(package
  (name p4spec)
  (version 0.0.1)
  (synopsis "P4Spec: A language design framework for the P4 Programming Language")
  (maintainers "99jaehyunlee@kaist.ac.kr")
  (depends
    bignum
    core
    core_unix))
