(test
 (name test)
 (preprocess
  (pps ppx_let bisect_ppx))
 (modules test)
 (libraries p4cherry core core_kernel core_unix core_unix.command_unix)
 (instrumentation
  (backend bisect_ppx))
 (action
  (progn
   (ignore-outputs
    (diff parse_p4c.expected parse_p4c.actual))
   (ignore-outputs
    (diff parse_petr4.expected parse_petr4.actual))
   (ignore-outputs
    (diff typecheck_pos_p4c.expected typecheck_pos_p4c.actual))
   (ignore-outputs
    (diff
     typecheck_pos_p4c_excluded.expected
     typecheck_pos_p4c_excluded.actual))
   (ignore-outputs
    (diff typecheck_neg_p4c.expected typecheck_neg_p4c.actual))
   (ignore-outputs
    (diff
     typecheck_neg_p4c_excluded.expected
     typecheck_neg_p4c_excluded.actual))
   (ignore-outputs
    (diff typecheck_pos_petr4.expected typecheck_pos_petr4.actual))
   (ignore-outputs
    (diff
     typecheck_pos_petr4_excluded.expected
     typecheck_pos_petr4_excluded.actual))
   (ignore-outputs
    (diff typecheck_neg_petr4.expected typecheck_neg_petr4.actual))
   (ignore-outputs
    (diff instantiate_p4c.expected instantiate_p4c.actual))
   (ignore-outputs
    (diff instantiate_petr4.expected instantiate_petr4.actual))
   (ignore-outputs
    (diff run_v1model_p4c.expected run_v1model_p4c.actual))
   (ignore-outputs
    (diff run_v1model_petr4.expected run_v1model_petr4.actual))
   (ignore-outputs
    (diff run_ebpf_p4c.expected run_ebpf_p4c.actual)))))

(rule
 (target parse_p4c.actual)
 (action
  (with-stdout-to
   parse_p4c.actual
   (with-stderr-to
    parse_p4c.err
    (run
     ./test.exe
     parse
     -i
     ../../../testdata/arch
     ../../../testdata/p4c/program/well-typed)))))

(rule
 (target parse_petr4.actual)
 (action
  (with-stdout-to
   parse_petr4.actual
   (with-stderr-to
    parse_petr4.err
    (run
     ./test.exe
     parse
     -i
     ../../../testdata/arch
     ../../../testdata/petr4/program/well-typed)))))

(rule
 (target typecheck_pos_p4c.actual)
 (action
  (with-stdout-to
   typecheck_pos_p4c.actual
   (with-stderr-to
    typecheck_pos_p4c.err
    (run
     ./test.exe
     typecheck
     -i
     ../../../testdata/arch
     -p
     ../../../testdata/p4c/program/well-typed)))))

(rule
 (target typecheck_pos_p4c_excluded.actual)
 (action
  (with-stdout-to
   typecheck_pos_p4c_excluded.actual
   (with-stderr-to
    typecheck_pos_p4c_excluded.err
    (run
     ./test.exe
     typecheck
     -i
     ../../../testdata/arch
     -p
     ../../../testdata/p4c/program/well-typed-excluded)))))

(rule
 (target typecheck_neg_p4c.actual)
 (action
  (with-stdout-to
   typecheck_neg_p4c.actual
   (with-stderr-to
    typecheck_neg_p4c.err
    (run
     ./test.exe
     typecheck
     -i
     ../../../testdata/arch
     -n
     ../../../testdata/p4c/program/ill-typed)))))

(rule
 (target typecheck_neg_p4c_excluded.actual)
 (action
  (with-stdout-to
   typecheck_neg_p4c_excluded.actual
   (with-stderr-to
    typecheck_neg_p4c_excluded.err
    (run
     ./test.exe
     typecheck
     -i
     ../../../testdata/arch
     -n
     ../../../testdata/p4c/program/ill-typed-excluded)))))

(rule
 (target typecheck_pos_petr4.actual)
 (action
  (with-stdout-to
   typecheck_pos_petr4.actual
   (with-stderr-to
    typecheck_pos_petr4.err
    (run
     ./test.exe
     typecheck
     -i
     ../../../testdata/arch
     -p
     ../../../testdata/petr4/program/well-typed)))))

(rule
 (target typecheck_pos_petr4_excluded.actual)
 (action
  (with-stdout-to
   typecheck_pos_petr4_excluded.actual
   (with-stderr-to
    typecheck_pos_petr4_excluded.err
    (run
     ./test.exe
     typecheck
     -i
     ../../../testdata/arch
     -p
     ../../../testdata/petr4/program/well-typed-excluded)))))

(rule
 (target typecheck_neg_petr4.actual)
 (action
  (with-stdout-to
   typecheck_neg_petr4.actual
   (with-stderr-to
    typecheck_neg_petr4.err
    (run
     ./test.exe
     typecheck
     -i
     ../../../testdata/arch
     -n
     ../../../testdata/petr4/program/ill-typed)))))

(rule
 (target instantiate_p4c.actual)
 (action
  (with-stdout-to
   instantiate_p4c.actual
   (with-stderr-to
    instantiate_p4c.err
    (run
     ./test.exe
     instantiate
     -i
     ../../../testdata/arch
     ../../../testdata/p4c/program/well-typed)))))

(rule
 (target instantiate_petr4.actual)
 (action
  (with-stdout-to
   instantiate_petr4.actual
   (with-stderr-to
    instantiate_petr4.err
    (run
     ./test.exe
     instantiate
     -i
     ../../../testdata/arch
     ../../../testdata/petr4/program/well-typed)))))

(rule
 (target run_v1model_p4c.actual)
 (action
  (with-stdout-to
   run_v1model_p4c.actual
   (with-stderr-to
    run_v1model_p4c.err
    (run
     ./test.exe
     run
     -a
     v1model
     -i
     ../../../testdata/arch
     -p
     ../../../testdata/p4c/stf/v1model-patch
     ../../../testdata/p4c/program/well-typed
     ../../../testdata/p4c/stf/v1model)))))

(rule
 (target run_v1model_petr4.actual)
 (action
  (with-stdout-to
   run_v1model_petr4.actual
   (with-stderr-to
    run_v1model_petr4.err
    (run
     ./test.exe
     run
     -a
     v1model
     -i
     ../../../testdata/arch
     -p
     ../../../testdata/petr4/stf-patch
     ../../../testdata/petr4/program/well-typed
     ../../../testdata/petr4/stf)))))

(rule
 (target run_ebpf_p4c.actual)
 (action
  (with-stdout-to
   run_ebpf_p4c.actual
   (with-stderr-to
    run_ebpf_p4c.err
    (run
     ./test.exe
     run
     -a
     ebpf
     -i
     ../../../testdata/arch
     ../../../testdata/p4c/program/well-typed
     ../../../testdata/p4c/stf/ebpf)))))
