(test
 (name test)
 (preprocess
  (pps ppx_let))
 (modules test)
 (libraries p4spec core core_kernel core_unix core_unix.command_unix)
 (action
  (progn
   (ignore-outputs
    (diff elab.expected elab.actual))
   ; (ignore-outputs
   ;  (diff struct.expected struct.actual))
   (ignore-outputs
    (diff run_typing_pos_p4c.expected run_typing_pos_p4c.actual))
   (ignore-outputs
    (diff run_typing_neg_p4c.expected run_typing_neg_p4c.actual)))))

(rule
 (target elab.actual)
 (action
  (with-stdout-to
   elab.actual
   (with-stderr-to
    elab.err
    (run ./test.exe elab -s ../../../../spec)))))

; (rule
;  (target struct.actual)
;  (action
;   (with-stdout-to
;    struct.actual
;    (with-stderr-to
;     struct.err
;     (run ./test.exe struct -s ../../../../spec)))))

(rule
 (target run_typing_pos_p4c.actual)
 (action
  (with-stdout-to
   run_typing_pos_p4c.actual
   (with-stderr-to
    run_typing_pos_p4c.err
    (run
     ./test.exe
     run-typing
     -s
     ../../../../spec
     -i
     ../../../../p4/testdata/arch
     -d
     ../../../../p4/testdata/p4c/program/well-typed)))))

(rule
 (target run_typing_neg_p4c.actual)
 (action
  (with-stdout-to
   run_typing_neg_p4c.actual
   (with-stderr-to
    run_typing_neg_p4c.err
    (run
     ./test.exe
     run-typing
     -s
     ../../../../spec
     -i
     ../../../../p4/testdata/arch
     -d
     ../../../../p4/testdata/p4c/program/ill-typed
     -neg)))))
