(library
 (name parsing)
 (libraries util domain xl il core_unix menhirLib)
 (modules
  source
  context
  extract
  parser
  value
  lexer
  preprocessor
  ast_utils
  pp
  pp_utils
  parse
  parser_debug
  debug_config
  hint))

(ocamllex
 (modules lexer))

(menhir
 (modules parser)
 (flags --explain --table --inspection))
